# loonix

./: .gitignore  Makefile  TODO.txt  aarch64.env  builtin.h  graphics.h  helpers.h  lamegame.h  main.c  x86-64.env
apps/: build_bin.sh  cat.c  lc.c  lc.h  ls.c  shewax.c  test.c  testalloc.c  testargs.c
bootloader/: meson.build
bootloader/include/: bootloader.h  elf.h  extern.h  magic.h  shell.h  stack.h  std.h
bootloader/src/: elf.c  main.c  shell.c  shell.c_not  stack.c  std.c
efi/: Base.h  README.md  boot_table.h  efi.h  efi_runtime_services.h  efi_simple_text_input_protocol.h  graphics_output_protocol.h  serial.h  system_table.h  types.h
efi/X64/: ProcessorBind.h
elf/: a.out  elf.c  elf.h  test
elfparser/: a.out  ex.c  grep  main.c
include/: app.h  cat.h  elf.h  extern.h  graphics.h  lamegame.h  shell.h  stack.h  std.h  syscall.h
kernel/: aarch64.build  meson.build  x86_64.build
kernel/include/: acpi.h  efi_khelpers.h  entry.h  event_loop.h  graphics.h  io.h  kernel.h  kstd.h  mem.h  newmem.h  process.h  serial.h  timer.h
kernel/include/arch/: aarch64.h  arch.h  x86_64.h
kernel/include/drivers/: acpi.h  ahci.h  framebuffer.h  nvme.h  pci.h  pl011.h  pl011uart.h  ps2.h  rtc.h  serial.h  serial_pl011.h  serial_x86.h  serialaa64.h  serialx86.h  vt100.h
kernel/include/fs/: fs.h
kernel/include/graphics/: bitmap_font.h  font.h  font16x16.h  font8x8.h  font8x8_basic.h  font_5x7.h  font_5x7.png.h  graphics.h  tux.png.h
kernel/include/irq/: aarch64.h  irq.h
kernel/include/kstd/: async.h  cmp.h  fun.h  karray.h  khashmap.h  klist.h  kstd.h  kstring.h  ktime.h  ktree.h  macro.h  regex.h  regex_static.h  vec.h
kernel/include/network/: ether.h  ipv4.h  net.h
kernel/include/preprocessed/: array.json  loop_uint.json
kernel/include/pythonix/: grammar.h  pythonix.h  types.h
kernel/include/shell/: builtins.h  gol.h  shell.h
kernel/include/sys/: io.h  newmem.h  process.h  task.h  timer.h
kernel/include/vm/: grammar.h  parser.h  types.h  vm.h
kernel/rs/: libkstd.rs  libshell.rs
kernel/rs/graphics/: graphics.rs
kernel/rs/kstd/: hashmap.rs  kstd.rs  pci.rs  task.rs
kernel/rs/nvme/: nvme.rs
kernel/rs/pci/: pci.rs
kernel/rs/pythonix/: builtins.rs  hashmap.rs  interpreter.rs  pythonix.rs  tests.rs  tokenizer.rs  tokenizer.rs.bak
kernel/rs/shell/: builtins.rs  shell.rs
kernel/src/: aarch64boot.S  acpi.c  bootaarch64.s  bootx86_64.s  crt0.c  efi_khelpers.c  event_loop.c  interrupt.c  io.c  kstd.c  linkaarch64.ld  linkx86_64.ld  main.c  mem.c  meson.build  newmem.c  port_io.c  process.c  serial.c  timer.c  uart.c  x86_64boot.S
kernel/src/arch/: aarch64_cpu.S  aarch64_int.S  aarch64_int.c  aarch64_vector_table.S  aarch64cpu.S  aarch64int.c  gdt.c  x86_64_cpu.S  x86_64_int.S  x86_64_int.c  x86_64cpu.S  x86_64int.c  x86_64isr.S
kernel/src/cpu/: aarch64cpu.S  x86_64cpu.S
kernel/src/drivers/: acpi.c  ahci.c  framebuffer.c  io.c  nvme.c  pci.c  pl011.c  ps2.c  rtc.c  serial.c  serial_pl011.c  serial_x86.c  serialaa64.c  serialx86.c  useless.c  vt100.c
kernel/src/fs/: fs.c
kernel/src/graphics/: bitmap_font.c  font.c  font16x16.c  font8x8.c  graphics.c
kernel/src/irq/: aarch64.S  aarch64asmirq.S  irq.c  x86_64asmirq.S
kernel/src/kstd/: cmp.c  karray.c  khashmap.c  klist.c  kstd.c  kstring.c  ktime.c  ktree.c  regexp.c
kernel/src/network/: ether.c  ipv4.c  net.c
kernel/src/pythonix/: interpreter.c  parse.c  type.c  type_int.c  type_str.c  vm.c
kernel/src/shell/: builtins.c  gol.c  shell.c
kernel/src/sys/: interrupt.c  io.c  newmem.c  process.c  task.c  timer.c
kernel/src/vm/: parser.c  types.c
scripts/: build_all.ps1  build_all.py  build_all.sh  build_bin.sh  build_bootloader.ps1  build_bootloader.py  build_bootloader.sh  build_kernel.ps1  build_kernel.py  build_kernel.sh  clean.ps1  clean.sh  clean_objects.ps1  clean_objects.sh  config.py  gdb.sh  img2sprite.py  lldb.py  lldb.sh  meson_gen_source.py  move_bin.sh  nobuild_qemu.sh  qemu.ps1  qemu.py  qemu.sh
src/: cat.c  elf.c  graphics.c  lamegame.c  main.c  shell.c  stack.c  std.c  syscall.c
stdlib/include/: stdio.h  stdlib.h  stdlib_h.h  string.h  type.h
stdlib/src/: stdio.c  stdlib.c  string.c
